2000-07-12  Mo DeJong  <mdejong@redhat.com>

	* src/Makefile.hand: Removed the Makefile
	used in the old build system. All builds
	should now be done with ./configure ; make.

2000-07-12  Mo DeJong  <mdejong@redhat.com>

	* missing:
	* mkinstalldirs: Added files that did not
	make it into the CVS for some strange reason.

2000-07-09  C. Scott Ananian  <cananian@lesser-magoo.lcs.mit.edu>

	* src/stream.cpp (ProcessInputUnicode): Fix for
	unicode line termination problems in Jacks section
	3.4. This is a followup patch for jitter bug number 253.

2000-07-08  Mo DeJong  <mdejong@redhat.com>

	* configure.in: Add AM_MAINTAINER_MODE macro.
	This will stop regeneration of configure
	related file when timestamps do not match.

2000-06-26  Andrew G. Tereschenko  <tag@ibis.odessa.ua>

	* src/diagnose.cpp (MergeCandidate):
	* src/diagnose.h (MergeCandidate): Change
	return type of method from bool to int.

2000-06-26  C. Scott Ananian  <cananian@lesser-magoo.lcs.mit.edu>

	* src/code.h: Fix comment.
	* src/gencode.java: Fix comment.
	* src/stream.cpp: Fix for jitter bug number 253.

2000-06-22  Andrew G. Tereschenko  <tag@ibis.odessa.ua>

	* src/platform.h: Avoid using #if ! to avoid
	bugs in the VC++ preprocessor.

2000-06-07  Mo DeJong  <mdejong@redhat.com>

	* src/control.cpp (ProcessSubdirectories):
	Fixed up compiler warnings in the Windows code.
	* src/jikesapi.cpp (DefaultFileReader):
	Added check for number of bytes read.
	* src/option.cpp (Option): Reorder
	declarations to make compiler happy.
	* src/platform.cpp (IntToString, IntToWstring):
	Avoid compiler warnings.
	* src/stream.cpp (ProcessInputUnicode):
	Avoid compiler warnings. Added FIXME.

2000-06-06  Mo DeJong  <mdejong@redhat.com>

	* configure: Regen to fix Solaris build.
	* configure.in: Removed some comments,
	fixed up a minor path issue.
	* src/stamp-h.in: Regen.

2000-06-03  Mo DeJong  <mdejong@redhat.com>

	* src/decl.cpp (CheckPackage): Removed
	error generated by jikes when a package